--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@vercel/analytics": "^0.1.6",
     "next": "13.1.1",
     "polished": "^4.2.2",
     "react": "18.2.0",
