--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.1",
     "@vercel/analytics": "^0.1.6",
     "next": "13.1.1",
+    "nextjs-progressbar": "^0.0.16",
     "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
