--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-reveal": "^1.2.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
