--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 
 # dependencies
 /node_modules
+/.yarn
 /.pnp
 .pnp.js
-.yarn/install-state.gz
+.yarnrc.yml
+.gitpod.yml
 
 # testing
 /coverage
@@ -24,13 +26,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
 .env*.local
 
 # vercel
 .vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
