--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "14.1.0",
-    "@vercel/analytics": "^1.1.2",
-    "next": "14.1.0",
+    "@vercel/analytics": "^1.2.0",
+    "next": "^14.1.0",
     "nextjs-progressbar": "^0.0.16",
     "polished": "^4.3.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-reveal": "^1.2.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.56",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
@@ -31,7 +31,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.2.4",
-    "typescript": "^5"
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3"
   }
 }
